--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "mysql2": "^3.0.0",
     "pg": "^8.11.3",
     "sequelize": "^6.28.2",
+    "through2": "^4.0.2",
     "uuid": "^9.0.0",
     "yup": "^1.0.0"
   },
