--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "dotenv": "^16.3.1",
     "express": "^4.18.1",
     "jsonwebtoken": "^9.0.0",
+    "knex": "^3.1.0",
     "luxon": "^3.4.4",
     "moment": "^2.29.3",
     "multer": "^1.4.4",
